err/coapthon.err
Listing '.'...
Listing './bin'...
Compiling './bin/coapclient.py'...
***   File "./bin/coapclient.py", line 15
    print "Command:\tcoapclient.py -o -p [-P]"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/coapforwardproxy.py'...
***   File "./bin/coapforwardproxy.py", line 14
    print "CoAP Proxy start on " + host + ":" + str(port)
                               ^
SyntaxError: invalid syntax

Compiling './bin/coapreverseproxy.py'...
***   File "./bin/coapreverseproxy.py", line 15
    print "CoAP Proxy start on " + host + ":" + str(port)
                               ^
SyntaxError: invalid syntax

Compiling './bin/coapserver.py'...
***   File "./bin/coapserver.py", line 29
    print "CoAP Server start on " + host + ":" + str(port)
                                ^
SyntaxError: invalid syntax

Compiling './bin/exampleresources.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CoAPthon-4.0.2.egg-info'...
Listing './lib/python3.5/site-packages/coapthon'...
Listing './lib/python3.5/site-packages/coapthon/caching'...
Compiling './lib/python3.5/site-packages/coapthon/caching/cache.py'...
***   File "./lib/python3.5/site-packages/coapthon/caching/cache.py", line 30
    print "adding response to the cache"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coapthon/caching/coaplrucache.py'...
***   File "./lib/python3.5/site-packages/coapthon/caching/coaplrucache.py", line 33
    print "problem here"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coapthon/client'...
Listing './lib/python3.5/site-packages/coapthon/forward_proxy'...
Compiling './lib/python3.5/site-packages/coapthon/forward_proxy/coap.py'...
***   File "./lib/python3.5/site-packages/coapthon/forward_proxy/coap.py", line 148
    print "Exception with Executor"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coapthon/layers'...
Compiling './lib/python3.5/site-packages/coapthon/layers/cachelayer.py'...
***   File "./lib/python3.5/site-packages/coapthon/layers/cachelayer.py", line 36
    print "resource not fresh"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coapthon/messages'...
Listing './lib/python3.5/site-packages/coapthon/resources'...
Listing './lib/python3.5/site-packages/coapthon/reverse_proxy'...
Compiling './lib/python3.5/site-packages/coapthon/reverse_proxy/coap.py'...
***   File "./lib/python3.5/site-packages/coapthon/reverse_proxy/coap.py", line 246
    print "Exception with Executor"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coapthon/serializer.py'...
***   File "./lib/python3.5/site-packages/coapthon/serializer.py", line 223
    print values
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coapthon/server'...
Compiling './lib/python3.5/site-packages/coapthon/server/coap.py'...
***   File "./lib/python3.5/site-packages/coapthon/server/coap.py", line 183
    print "Exception with Executor"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
